--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.157.0",
+    "three-addons": "^1.2.0",
     "three-gltf-loader": "^1.111.0",
     "web-vitals": "^2.1.4"
   },
